# JNIFunc

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/suxw/ndkfunc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: BytesUtil.cpp  BytesUtil.h  Config.cpp  Config.h  Controller.cpp  Controller.h  ErrorCode.h  LogUtil.cpp  LogUtil.h  SerialPort.cpp  SerialPort.h  SerialPortUtil.cpp  SerialPortUtil.h  SocketUtil.cpp  SocketUtil.h  StringTools.c  StringTools.h  StringUtil.c  StringUtil.cpp  StringUtil.h  TimerUtil.cpp  TimerUtil.h  Viewer.cpp  Viewer.h
app/src/main/java/com/suxw/ndkfunc/: MainActivity.java  NDKStringActivity.java  SerialPortActivity.java
app/src/main/java/com/suxw/ndkfunc/util/: SerialPort.java  StringUtil.java
app/src/main/res/layout/: activity_main.xml  activity_ndk_string.xml  activity_serial_port.xml  func_list_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/suxw/ndkfunc/: ExampleUnitTest.java
doc/: ndk_func.cfg
gradle/wrapper/: gradle-wrapper.properties
